Add URL ping functionality & update path

--- a/snapraid-helper.ini
+++ b/snapraid-helper.ini
@@ -1,14 +1,14 @@
-; This file uses semicolon for comment lines.  Blank lines are okay.  
+; This file uses semicolon for comment lines.  Blank lines are okay.
 ; Everything else will be taken as a config option.
-; The equal sign is not valid in variables.  
+; The equal sign is not valid in variables.
 ; Do not quote strings.
-; Version: 3.3 (2016/06/16)
+; Version: 4.0 (2024/05/02)
 
 ; UTF8 Console
 UTF8Console=1
 
 ; **** E-Mail Variables ****
-EmailEnable=1
+EmailEnable=0
 EmailTo=John.Doe@domain.com
 EmailFrom=SnapRAID@domain.com
 EmailFromName=SnapRAID
@@ -42,7 +42,7 @@ SMTPAuthEnable=1
 SMTPUID=username
 SMTPPass=Passw0rd
 
-; **** IF you get the following error: Exception calling "Send" with "4" argument(s): "The SMTP server requires a secure connection or the client waauthenticated. The server response was: 5.5.1 Authentication Required. Learn more at" -> You have your userid/password incorrect. ****
+; **** IF you get the following error: Exception calling "Send" with "4" argument(s): "The SMTP server requires a secure connection or the client authenticated. The server response was: 5.5.1 Authentication Required. Learn more at" -> You have your userid/password incorrect. ****
 
 ;where to develop the body of the email prior to sending i.e. C:\SnapRAID\E-MailBody\
 ;If a full path is not specified, it will use %TEMP%\<filename>
@@ -60,6 +60,9 @@ LogFileMaxSizeZIP=512kb
 MaxAttachSize=5mb
 ; Cut the logfile to contain just 1 entry per percent
 ShortenLogFile=1
+
+; **** Ping URL (URL to ping when job is complete for things like Healthchecks.io). Leave blank if not required.) ****
+;pingURL=
 
 ;where to collect temporary output i.e. C:\SnapRAID\Temp\
 ;If a full path is not specified, it will use %TEMP%\<filename>
