Revised config for v2

--- a/snapraid-helper.ini
+++ b/snapraid-helper.ini
@@ -1,114 +1,49 @@
-; This file uses semicolon for comment lines.  Blank lines are okay.
-; Everything else will be taken as a config option.
-; The equal sign is not valid in variables.
-; Do not quote strings.
-; Version: 4.0 (2024/05/02)
+; **** SnapRAID Helper Script config ****
 
-; UTF8 Console
-UTF8Console=1
-
-; **** E-Mail Variables ****
-EmailEnable=0
-EmailTo=John.Doe@domain.com
-EmailFrom=SnapRAID@domain.com
-EmailFromName=SnapRAID
-; What to put at the start of your email subject line
-SubjectPrefix=SnapRAID -
-; Default body if no content is collected into $EMAIL_BODY
-Body=Nothing to report here.
-
-; **** SMTP Setting Examples ****
-; ** Local SMTP server **
-;SMTPHost=127.0.0.1
-;SMTPPort=25
-;SMTPSSLEnable=0
-;If you want to disable auth set SMTPAuthEnable to 0
-;SMTPAuthEnable=0
-;SMTPUID=localeamil@address.com
-;SMTPPass=YourPass
-; ** Gmail as SMTP server **
-;SMTPHost=smtp.gmail.com
-;SMTPPort=587
-;SMTPSSLEnable=1
-;If your email address is username@gmail.com, this should your username
-;SMTPAuthEnable=1
-;SMTPUID=username@gmail.com
-;SMTPPass=password
-
-SMTPHost=
-SMTPPort=587
-SMTPSSLEnable=1
-SMTPAuthEnable=1
-SMTPUID=username
-SMTPPass=Passw0rd
-
-; **** IF you get the following error: Exception calling "Send" with "4" argument(s): "The SMTP server requires a secure connection or the client authenticated. The server response was: 5.5.1 Authentication Required. Learn more at" -> You have your userid/password incorrect. ****
-
-;where to develop the body of the email prior to sending i.e. C:\SnapRAID\E-MailBody\
-;If a full path is not specified, it will use %TEMP%\<filename>
-EmailBodyPath=
-EmailBodyFile=snapraid-email.out
-EmailBodyFileZip=snapraid-email.zip
-EmailOnSuccess=1
-EmailOnError=1
-IncludeExtendedInfo=0
-; Including the Logfile as ZIP
-; If set to 1 this Switch overrides the IncludeExtendedInfo to 0
-IncludeExtendedInfoZip=1
-LogFileMaxSizeZIP=512kb
-; Max Attachment Size in MB (if the Attachment is too large sending Email may fail)
-MaxAttachSize=5mb
-; Cut the logfile to contain just 1 entry per percent
-ShortenLogFile=1
-
-; **** Ping URL (URL to ping when job is complete for things like Healthchecks.io). Leave blank if not required.) ****
-;pingURL=
-
-;where to collect temporary output i.e. C:\SnapRAID\Temp\
-;If a full path is not specified, it will use %TEMP%\<filename>
-TmpOutputPath=
-TmpOutputFile=snapraid.out
+; **** Temp files ****
+TmpOutputPath=C:\SnapRAID\Script\Temp
+TmpOutputFile=output.tmp
 SnapRAIDStatusAfterScrub=1
 
-; **** Service Start/Stop ****
-; 1 = start and stop services listed in $ProcessNames,  0 = do not start and stop services
-ServiceEnable=1
-ServiceName="Medusa","Radarr","Sonarr","Sonarr-anime","Lidarr"
-;,"VBoxVmService"
-
-; **** Pre/Post Schedule ****
-; 1 = start process before and after snapraid processing
-ProcessEnable=0
-ProcessPre=C:\path\Power_On.exe
-ProcessPost=C:\path\Power_Off.exe
-
-; **** SnapRAID and Script Variables *****
-; Number of Deletes before script will error out to be safe and require manual update.
-SnapRAIDDelThreshold=300
-SnapRAIDPath=C:\Tools\Snapraid\
+; **** SnapRAID config ****
+SnapRAIDPath=C:\SnapRAID
 SnapRAIDExe=snapraid.exe
 SnapRAIDConfig=snapraid.conf
-SnapRAIDContentFiles=D:\snapraid-data1.content,M:\snapraid-media1.content,N:\snapraid-media2.content,O:\snapraid-media3.content
-SnapRAIDParityFiles=X:\snapraid-parity1.parity
+SnapRAIDContentFiles=
+SnapRAIDParityFiles=
 SkipParityFilesAtStart=0
+SnapRAIDDelThreshold=300
 FixZeroSubSecondTimestamp=1
+SnapRAIDEnableScrub=1
+ScrubFrequencyDays=7
 
-; **** Log file Management ****
-; dont forget the trailing \ on $LogPath
-LogPath=C:\Tools\Snapraid\
+; **** Logging ****
+LogPath=C:\SnapRAID\Script\Logs
 LogFileName=snapraid.log
-; Maximum log file size in MB.
-LogFileMaxSize=25mb
-LogFileZipCount=10
+LogFileMaxSize=50MB
+LogFileZipCount=5
 
-; **** EventLog Check Variables ****
+; **** Notifications ****
+pingURL= # Used for things like healthchecks.io. Leave empty if not needed. 
+
+; **** Console config ****
+UTF8Console=1
+
+; **** Start/Stop Services while script is running ****
+ServiceEnable=0 # 0 for off, 1 for on
+ServiceName=Service1,Service2
+
+; **** Run tasks pre or post script running ****
+ProcessEnable=0 # 0 for off, 1 for on
+ProcessPre=C:\SnapRAID\Scripts\pre-process.ps1
+ProcessPost=C:\SnapRAID\Scripts\post-process.ps1
+
+; **** Event logging ****
 EventLogEnable=1
-EventLogSources="DISK","FTDISK","NTFS"
 EventLogEntryType="Error","Warning"
-; Number of days to check into the past (must be negative number to make sense)
-EventLogDays=-1
-; 1 aborts update, 0 reports but continues update
+EventLogSources="DISK","FTDISK","NTFS"
+EventLogDays=1
 EventLogHaltOnDiskError=0
 
-; **** Debug Variables ****
-EnableDebugOutput=0
+; **** Script managed config - DO NOT EDIT ****
+LastScrubDate=2025-01-01
